# simple_joy_ws

./: .gitignore
src/joystick_client/: requirements.txt  test.py
src/joystick_client/joystick_client/: logitech-extreme-3d.json  logitech-xbox.json  main.py  tester.py
src/joystick_interface/: CMakeLists.txt  README.md  package.xml
src/joystick_interface/debian_scripts/: clean.sh  patch_rule.sh
src/joystick_interface/msg/: Joystick.msg
