<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joystick_interface</name>
  <version>0.2.0</version>
  <description>joystick generic message</description>
  <maintainer email="dev@gmail.com">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <depend>rosidl_default_generators</depend> -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
